<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_settings_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_h"
        android:background="@color/transparent_color" />

    <LinearLayout
        android:id="@+id/id_settings_background_holder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black_background_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/settings_left_space" >

        <TextView
            android:id="@+id/id_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/settings_left_space"
            android:text="@string/string_settings"
            android:textSize="@dimen/settings_title_text_size" />

        <LinearLayout
            android:id="@+id/id_settings_theme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <TextView
                android:id="@+id/id_settings_theme_accent_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_settings_theme"
                android:textSize="@dimen/settings_accents_chooser_text_size" />

            <TextView
                android:id="@+id/id_settings_theme_accent_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_group_item_space"
                android:text="@string/string_accent_color_teal"
                android:textColor="@color/black_background_gray_text_color"
                android:textSize="@dimen/setings_normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_settings_show_statusbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/settings_item_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <TextView
                android:id="@+id/id_settings_show_statusbar_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_show_status_bar"
                android:textSize="@dimen/settings_accents_chooser_text_size" />

            <TextView
                android:id="@+id/id_settings_show_statusbar_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_group_item_space"
                android:text="@string/string_on"
                android:textColor="@color/black_background_gray_text_color"
                android:textSize="@dimen/setings_normal_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>