<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_settings_theme_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_h"
        android:background="@color/transparent_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/id_settings_theme_background_holder"
        android:background="@color/black_background_color"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_settings_theme_title"
            android:background="@color/transparent_color"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_top_padding"
            android:text="@string/string_settings"
            android:textColor="@color/black_background_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_settings_theme_theme"
            android:background="@color/transparent_color"
            android:paddingBottom="@dimen/settings_item_space"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space"
            android:text="@string/string_settings_theme"
            android:textColor="@color/black_background_text_color"
            android:textSize="@dimen/settings_title_text_size" />

        <TextView
            android:id="@+id/id_settings_theme_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_color"
            android:paddingBottom="@dimen/settings_item_space"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_color"
            android:orientation="vertical"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_settings_theme_bg_title"
                android:background="@color/transparent_color"
                android:paddingBottom="@dimen/settings_group_item_space"
                android:paddingTop="@dimen/settings_title_item_space"
                android:text="@string/string_settings_theme_background"
                android:textColor="@color/black_background_text_color" />

            <TextView
                android:id="@+id/id_settings_theme_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_editbox_h"
                android:background="@drawable/wp7_edittext_background_black"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_group_item_space"
                android:textColor="@color/black_background_gray_text_color"
                android:textSize="@dimen/setings_normal_text_size"
                android:text="@string/string_settings_theme_background_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_settings_theme_accents_title"
                android:background="@color/transparent_color"
                android:paddingBottom="@dimen/settings_group_item_space"
                android:paddingTop="@dimen/settings_title_item_space"
                android:text="@string/string_settings_theme_accent_color"
                android:textColor="@color/black_background_text_color" />

            <TextView
                android:id="@+id/id_settings_theme_accent_color"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_editbox_h"
                android:gravity="center_vertical"
                android:background="@drawable/wp7_edittext_background_black"
                android:paddingLeft="@dimen/settings_group_item_space"
                android:textColor="@color/black_background_gray_text_color"
                android:text="@string/string_accent_color_teal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>