<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_edit_tile_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_h"
        android:background="@color/transparent_color" />

    <LinearLayout
        android:id="@+id/id_edit_tile_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black_background_color"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/id_edit_tile_hide_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <TextView
                android:id="@+id/id_edit_tile_hide_name_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_hide_tile_name"
                android:textSize="@dimen/settings_accents_chooser_text_size" />

            <TextView
                android:id="@+id/id_edit_tile_hide_name_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_group_item_space"
                android:text="@string/string_on"
                android:textColor="@color/black_background_gray_text_color"
                android:textSize="@dimen/setings_normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_edit_tile_large_icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <TextView
                android:id="@+id/id_edit_tile_large_icon_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_large_tile_icon"
                android:textSize="@dimen/settings_accents_chooser_text_size" />

            <TextView
                android:id="@+id/id_edit_tile_large_icon_name_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_group_item_space"
                android:text="@string/string_on"
                android:textColor="@color/black_background_gray_text_color"
                android:textSize="@dimen/setings_normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <EditText
                android:id="@+id/id_edit_tile_name_editbox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:background="@drawable/wp7_edittext_background_black"
                android:paddingLeft="@dimen/settings_left_space"
                android:textSize="@dimen/settings_accents_chooser_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <TextView
                android:id="@+id/id_choose_tile_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wp7_button_background_black"
                android:paddingLeft="@dimen/settings_left_space"
                android:text="@string/string_choose_tile_icon"
                android:textColor="@color/black_background_text_color"
                android:textSize="@dimen/settings_accents_chooser_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/settings_left_space"
            android:paddingRight="@dimen/settings_right_space"
            android:paddingTop="@dimen/settings_title_item_space" >

            <ImageView
                android:id="@+id/id_tile_icon_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/accenter_color_teal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_color"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/id_edit_tile_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/wp7_button_background_black"
                android:paddingRight="4dp"
                android:text="@string/string_ok"
                android:textColor="@color/black_background_text_color"
                android:textSize="@dimen/settings_accents_chooser_text_size" />

            <Button
                android:id="@+id/id_edit_tile_cancal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/wp7_button_background_black"
                android:paddingLeft="4dp"
                android:text="@string/string_cancel"
                android:textColor="@color/black_background_text_color"
                android:textSize="@dimen/settings_accents_chooser_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>